--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,7 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            buildConfigField("String", "THE_MOVIE_DB_API_KEY", "\"${TheMovieDBApiKey}\"")
         }
     }
     compileOptions {
