--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,9 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'dagger.hilt.android.plugin'
+    id 'kotlin-parcelize'
     id 'kotlin-kapt'
+
 }
 
 android {
@@ -66,6 +68,18 @@ dependencies {
     implementation 'androidx.compose.ui:ui-tooling-preview'
     implementation 'androidx.compose.material3:material3'
 
+    // Room
+    implementation "androidx.room:room-runtime:2.5.2"
+//    kapt "androidx.room:room-compiler:2.5.2"
+    annotationProcessor "androidx.room:room-compiler:2.5.2"
+    implementation "androidx.room:room-ktx:2.5.2"
+
+
+    // Ktor
+    implementation "io.ktor:ktor-server-core:2.3.4"
+    implementation "io.ktor:ktor-serialization-kotlinx-json:2.3.4"
+    implementation "io.ktor:ktor-client-core:2.3.4"
+
     // Compose dependencies
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.6.2"
     implementation "androidx.navigation:navigation-compose:2.7.3"
@@ -81,14 +95,18 @@ dependencies {
     kapt 'com.google.dagger:hilt-compiler:2.47'
     implementation 'androidx.hilt:hilt-navigation-compose:1.1.0-alpha01'
 
-    // Coil
-    implementation "io.coil-kt:coil-compose:2.4.0"
+    // Glide
+    implementation "com.github.bumptech.glide:glide:4.15.1"
+    implementation "com.github.bumptech.glide:compose:1.0.0-alpha.1"
 
     // Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation "com.squareup.okhttp3:okhttp:5.0.0-alpha.2"
     implementation "com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.2"
+
+    // Youtube
+    implementation "com.pierfrancescosoffritti.androidyoutubeplayer:core:12.1.0"
 
     // JUnit
     testImplementation 'junit:junit:4.13.2'
