--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,7 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.12.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.2'
     implementation 'androidx.activity:activity-compose:1.7.2'
+    implementation "androidx.lifecycle:lifecycle-runtime-compose:2.6.2"
     implementation platform('androidx.compose:compose-bom:2023.03.00')
     implementation 'androidx.compose.ui:ui'
     implementation 'androidx.compose.ui:ui-graphics'
@@ -82,11 +83,6 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.2'
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.2"
 
-    //Dagger - Hilt
-    implementation 'com.google.dagger:hilt-android:2.47'
-    kapt 'com.google.dagger:hilt-compiler:2.47'
-    implementation 'androidx.hilt:hilt-navigation-compose:1.1.0-alpha01'
-
     // Glide
     implementation "com.github.bumptech.glide:glide:4.15.1"
     implementation "com.github.bumptech.glide:compose:1.0.0-alpha.1"
@@ -97,10 +93,19 @@ dependencies {
     implementation "com.squareup.okhttp3:okhttp:5.0.0-alpha.2"
     implementation "com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.2"
 
+    // Glide
+    implementation "com.github.bumptech.glide:glide:4.15.1"
+    implementation "com.github.bumptech.glide:compose:1.0.0-alpha.1"
+
+    //Dagger - Hilt
+    implementation 'com.google.dagger:hilt-android:2.47'
+    kapt 'com.google.dagger:hilt-compiler:2.47'
+    implementation 'androidx.hilt:hilt-navigation-compose:1.1.0-alpha01'
+
     // Youtube
     implementation "com.pierfrancescosoffritti.androidyoutubeplayer:core:12.1.0"
 
-    // JUnit
+    // Junit
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
